@@ -55,9 +55,9 @@ importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,validObject)
-importFrom(mpmi,cmi)
 importFrom(parmigene,aracne.a)
 importFrom(parmigene,clr)
+importFrom(parmigene,knnmi.all)
 importFrom(psych,corr.test)
 importFrom(psych,partial.r)
 importFrom(rlang,.data)
