@@ -57,7 +57,7 @@ test_that("directed", {
         transformation = transformations, ppm = 5, directed = TRUE)
     expect_equal(directed(struct_adj_dir), TRUE)
     stat_adj_dir <- statistical(x_test_cut[1:5, 1:5],
-        model = c("clr", "aracne", "pearson", "spearman", "ggm","bayes"))
+        model = c("clr", "aracne", "pearson", "spearman", "ggm","bayes"), R=10)
     expect_equal(directed(stat_adj_dir), TRUE)
     expect_equal(directed(stat_adj), FALSE)
     expect_equal(directed(stat_adj_thr), FALSE)
@@ -127,8 +127,8 @@ test_that("as.data.frame", {
             "pearson_pvalue", "spearman_coef", "spearman_pvalue", "ggm_coef", "ggm_pvalue"))
     expect_equal(df$Row[1:5], c("x7449", "x11179", "x11179", "x11374", "x11374"))
     expect_equal(df$Col[1:5], c("x9485", "x9485", "x7449", "x9485", "x7449"))
-    expect_equal(sum(df$clr_coef), 276.4948, tolerance = 1e-06)
-    expect_equal(sum(df$aracne_coef), 57.64072, tolerance = 1e-06)
+    expect_equal(sum(df$clr_coef), 670.4608, tolerance = 1e-06)
+    expect_equal(sum(df$aracne_coef), 59.29789, tolerance = 1e-06)
     expect_equal(sum(df$pearson_coef), 213.6638, tolerance = 1e-06)
     expect_equal(sum(df$pearson_pvalue), 51.07814, tolerance = 1e-06)
     expect_equal(sum(df$spearman_coef), 203.2846, tolerance = 1e-06)
@@ -144,15 +144,15 @@ test_that("as.data.frame", {
             "pearson_pvalue", "spearman_coef", "spearman_pvalue", "ggm_coef", "ggm_pvalue", "consensus"))
     expect_equal(df$Row[1:5], c("x7449", "x11179", "x11179", "x11374", "x11374"))
     expect_equal(df$Col[1:5], c("x9485", "x9485", "x7449", "x9485", "x7449"))
-    expect_equal(sum(df$clr_coef), 276.4948, tolerance = 1e-06)
-    expect_equal(sum(df$aracne_coef), 57.64072, tolerance = 1e-06)
+    expect_equal(sum(df$clr_coef), 670.4608, tolerance = 1e-06)
+    expect_equal(sum(df$aracne_coef), 59.29789, tolerance = 1e-06)
     expect_equal(sum(df$pearson_coef), 213.6638, tolerance = 1e-06)
     expect_equal(sum(df$pearson_pvalue), 51.07814, tolerance = 1e-06)
     expect_equal(sum(df$spearman_coef), 203.2846, tolerance = 1e-06)
     expect_equal(sum(df$spearman_pvalue), 58.33817, tolerance = 1e-06)
     expect_equal(sum(df$ggm_coef), 16.67565, tolerance = 1e-06)
     expect_equal(sum(df$ggm_pvalue), 88.92563, tolerance = 1e-06)
-    expect_equal(sum(df$consensus), 12)
+    expect_equal(sum(df$consensus, na.rm=TRUE), 13)
     
     ## combine
     df <- as.data.frame(cons_adj)
@@ -165,9 +165,9 @@ test_that("as.data.frame", {
             "combine_mass"))
     expect_equal(df$Row[1:5], c("x9485", "x7449", "x7449", "x11179", "x11179"))
     expect_equal(df$Col[1:5], c("x9485", "x9485", "x7449", "x9485", "x7449"))
-    expect_equal(sum(df$clr_coef, na.rm = TRUE), 276.4948,
+    expect_equal(sum(df$clr_coef, na.rm = TRUE), 670.4608,
         tolerance = 1e-06)
-    expect_equal(sum(df$aracne_coef, na.rm = TRUE), 57.64072,
+    expect_equal(sum(df$aracne_coef, na.rm = TRUE), 59.29789,
         tolerance = 1e-06)
     expect_equal(sum(df$pearson_coef, na.rm = TRUE), 213.6638,
         tolerance = 1e-06)
@@ -181,7 +181,7 @@ test_that("as.data.frame", {
         tolerance = 1e-06)
     expect_equal(sum(df$ggm_pvalue, na.rm = TRUE), 88.92563,
         tolerance = 1e-06)
-    expect_equal(sum(df$consensus, na.rm = TRUE), 12)
+    expect_equal(sum(df$consensus, na.rm = TRUE), 13)
     expect_equal(df$binary[1:5], c(0, 1, 0, 0, 1))
     expect_equal(as.vector(table(df$binary)), c(649, 17))
     expect_equal(df$group[1:5], 
@@ -191,9 +191,9 @@ test_that("as.data.frame", {
         c("", "86.0003939305", "", "", "162.0528234315"))
     expect_equal(as.vector(table(df$mass)), c(649, 6, 11))
     expect_equal(df$combine_binary[1:5], c(NA, 0, NA, 0, 0))
-    expect_equal(as.vector(table(df$combine_binary)), c(624, 6))
+    expect_equal(as.vector(table(df$combine_binary)), c(623, 7))
     expect_equal(df$combine_group[1:5], c(NA, "", NA, "", ""))
-    expect_equal(as.vector(table(df$combine_group)), c(624, 6))
+    expect_equal(as.vector(table(df$combine_group)), c(623, 6, 1))
     expect_equal(df$combine_mass[1:5], c(NA, "", NA, "", ""))
-    expect_equal(as.vector(table(df$combine_mass)), c(624, 6))
+    expect_equal(as.vector(table(df$combine_mass)), c(623, 1, 6))
 })
