@@ -5,7 +5,10 @@ Changes in version 1.11.6 (2021-11-24)
   threshold for the top1, top2, and mean types to take into account
   negative coefficients (e.g. from pearson or spearman correlation)
 + remove ppcor package and use psych::partial.r for partial correlation,
-  calculate the t-values/p-values based on the partial correlation coefficients
+  calculate the t-values/p-values based on the partial correlation 
+  coefficients
++ use knnmi.all from parmigene to calculate MI scores, remove mpmi::cmi 
+  dependency
 
 Changes in version 1.11.5 (2021-10-12)
 + add assays in structural based on columns in transformations that are 
